Fix single click on iOS

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 body {
   background-color: #124734;
   margin: 0;
+  cursor: pointer;
 }
 main {
   text-align: center;
@@ -17,7 +18,8 @@ main {
   margin-right: auto;
   display: inline-block;
   position: relative;
-  max-height: 100vh;
+  max-height: 100%;
+  cursor: initial;
 }
 .map {
   max-width: 100%;
@@ -27,8 +29,7 @@ main {
 
 audio {
   position: fixed;
-  left: -webkit-calc(50%);
-  left: calc(50%);
+  left: 50%;
   -webkit-transform: translate(-50%);
   transform: translate(-50%);
   bottom: 17%;
@@ -50,6 +51,10 @@ img:hover {
 .icon {
   position: absolute;
   cursor: pointer;
+}
+
+.icon.no-audio {
+  filter: grayscale(1);
 }
 
 .icon:hover:not(.icon-2, .label-2, .icon-8, .label-8, .label-22, .icon-27, .label-27, .icon-32, .label-32, .icon-33, .label-33) {
